# fast-cached-api

./: .env  Dockerfile   README.md  docker-compose.yml  pyproject.toml
src/: auth.py  config.py  main.py  models.py
src/routers/: products.py  users.py
